fixed Initial commit

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "muhammad/hello",
+    "name": "muhammad661/hello",
     "description": "\"It for testing I use\"",
     "type": "library",
     "license": "MIT",
